# serializer version: 1
# name: TestDetailedFormatterSnapshots.test_detailed_nested_steps
  '''
  
  [1;34mTEST CASE:[0m Nested_Test
  [1mVERDICT:[0m PASS
  [1mDURATION:[0m [1;36m3.[0m0000s
                 ╷          ╷                             
   [1m [0m[1mTimestamp   [0m[1m [0m│[1m [0m[1mResult  [0m[1m [0m│[1m [0m[1mDescription               [0m[1m [0m 
   ══════════════╪══════════╪════════════════════════════ 
    100.000000   │ [1;32mPASS    [0m │ [1m[TS-001][0m Main step          
    100.500000   │ [1;32mPASS    [0m │   [1m[TS-002][0m Sub-step 1       
    101.000000   │ [1;32mPASS    [0m │     [1m[TS-003][0m Sub-sub-step   
    101.500000   │ [1;32mPASS    [0m │   [1m[TS-004][0m Sub-step 2       
    102.000000   │ [1;32mPASS    [0m │ [1m[TS-005][0m Another main step  
                 ╵          ╵                             
  --------------------------------------------------------------------------------
  
  '''
# ---
# name: TestDetailedFormatterSnapshots.test_detailed_simple_test_case
  '''
  
  [1;34mTEST CASE:[0m Simple_Test
  [1mVERDICT:[0m PASS
  [1mDURATION:[0m [1;36m5.[0m0000s
                 ╷          ╷                                       
   [1m [0m[1mTimestamp   [0m[1m [0m│[1m [0m[1mResult  [0m[1m [0m│[1m [0m[1mDescription                         [0m[1m [0m 
   ══════════════╪══════════╪══════════════════════════════════════ 
    100.000000   │ [1;32mPASS    [0m │ [1m[TS-001][0m Initialize test environment  
    101.500000   │ [1;32mPASS    [0m │   [1m[TS-002][0m Check initial conditions   
                 ╵          ╵                                       
  --------------------------------------------------------------------------------
  
  '''
# ---
# name: TestDetailedFormatterSnapshots.test_detailed_test_case_with_diagnostic_data
  '''
  
  [1;34mTEST CASE:[0m UDS_Read_DID
  [1mVERDICT:[0m FAIL
  [1mDURATION:[0m [1;36m5.[0m0000s
                 ╷          ╷                                                   
   [1m [0m[1mTimestamp   [0m[1m [0m│[1m [0m[1mResult  [0m[1m [0m│[1m [0m[1mDescription                                     [0m[1m [0m 
   ══════════════╪══════════╪══════════════════════════════════════════════════ 
    100.000000   │ [1;31mFAIL    [0m │ [1m[TS-001][0m UDS Request                              
                 │          │ [2;34m- Request: 22 F1 90 (Raw: 0x22F190)[0m               
                 │          │ [2;34m  - Expected: 62 F1 90 AB CD (Raw: 0x62F190ABCD)[0m  
                 │          │ [2;34m  - Actual: 7F 22 31 (Raw: 0x7F2231)[0m              
                 ╵          ╵                                                   
  --------------------------------------------------------------------------------
  
  '''
# ---
# name: TestDetailedFormatterSnapshots.test_detailed_test_case_with_failure
  '''
  
  [1;34mTEST CASE:[0m Request_Response_Test
  [1mVERDICT:[0m FAIL
  [1mDURATION:[0m [1;36m2.[0m0000s
                 ╷          ╷                           
   [1m [0m[1mTimestamp   [0m[1m [0m│[1m [0m[1mResult  [0m[1m [0m│[1m [0m[1mDescription             [0m[1m [0m 
   ══════════════╪══════════╪══════════════════════════ 
    100.000000   │ [1;32mPASS    [0m │ [1m[TS-001][0m Send request     
    101.500000   │ [1;31mFAIL    [0m │ [1m[TS-002][0m Verify response  
                 ╵          ╵                           
  --------------------------------------------------------------------------------
  
  '''
# ---
# name: TestFailureFormatterSnapshots.test_failures_multiple_failures
  '''
  [31m╔══════════════════════════════════════════════════════════════════════════════╗[0m
  [31m║[0m [1;31mSystem_Check[0m - Found 2 failures                                              [31m║[0m
  [31m╚══════════════════════════════════════════════════════════════════════════════╝[0m
  
  [1;31m✖ Check_Voltage_Range[0m
    [3mVoltage too high[0m
  
  [1;33mContext:[0m
  [1;2;33m  - Measuring voltage[0m
  [1;2;33m  - Expected: 12.0V ± 0.5V[0m
  [1;2;33m  - Actual: 15.2V[0m
  
  [31m╭─[0m[31m──────────────────────────────────[0m[31m ERROR [0m[31m───────────────────────────────────[0m[31m─╮[0m
  [31m│[0m Voltage out of range                                                         [31m│[0m
  [31m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  [1;31m✖ Check_ECU_Response[0m
    [3mNo response[0m
  
  [1;33mContext:[0m
  [1;2;33m  - Sending request[0m
  [1;2;33m  - Waiting for response...[0m
  [1;2;33m  - Timeout after 5s[0m
  
  [31m╭─[0m[31m──────────────────────────────────[0m[31m ERROR [0m[31m───────────────────────────────────[0m[31m─╮[0m
  [31m│[0m Timeout waiting for response                                                 [31m│[0m
  [31m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestFailureFormatterSnapshots.test_failures_no_failures
  '''
  [32m✔[0m No failures in module: [1mModule[0m
  
  '''
# ---
# name: TestFailureFormatterSnapshots.test_failures_with_context_logs
  '''
  [31m╔══════════════════════════════════════════════════════════════════════════════╗[0m
  [31m║[0m [1;31mECU_Diagnostics[0m - Found 1 failures                                           [31m║[0m
  [31m╚══════════════════════════════════════════════════════════════════════════════╝[0m
  
  [1;31m✖ Check_DTC_Status[0m
    [3mDTC mismatch[0m
  
  [1;33mContext:[0m
  [1;2;33m  - I-001: Starting diagnostic session[0m
  [1;2;33m  - I-002: Session changed to extended[0m
  [1;2;33m  - I-003: Reading DTC memory[0m
  [1;2;33m  - I-004: DTC request sent: 19 02 FF[0m
  [1;2;33m  - I-005: Response received: 59 02 00[0m
  
  [31m╭─[0m[31m──────────────────────────────────[0m[31m ERROR [0m[31m───────────────────────────────────[0m[31m─╮[0m
  [31m│[0m Expected DTC 0x123456, got 0x000000                                          [31m│[0m
  [31m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestFailureFormatterSnapshots.test_failures_with_diagnostic_table
  '''
  [31m╔══════════════════════════════════════════════════════════════════════════════╗[0m
  [31m║[0m [1;31mDiagnostics[0m - Found 1 failures                                               [31m║[0m
  [31m╚══════════════════════════════════════════════════════════════════════════════╝[0m
  
  [1;31m✖ UDS_DTC_Read[0m
    [3mResponse mismatch[0m
  
  [1;33mContext:[0m
  [1;2;33m  - Request: Read DTC[0m
  
  [1;34m                Diagnostic Data                 [0m
                                                  
   [1m [0m[1mParameter[0m[1m [0m [1m [0m[1mValue            [0m[1m [0m [1m [0m[1mRaw         [0m[1m [0m 
   ────────────────────────────────────────────── 
    Request     19 02 FF            0x1902FF      
    Expected    59 02 01 23 45 67   0x5902012345  
    Actual      59 02 00            0x590200      
                                                  
  [31m╭─[0m[31m──────────────────────────────────[0m[31m ERROR [0m[31m───────────────────────────────────[0m[31m─╮[0m
  [31m│[0m UDS request failed                                                           [31m│[0m
  [31m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestSummaryFormatterSnapshots.test_summary_empty_report
  '''
  [3m        Module: Empty_Module         [0m
  ╭─────────────┬─────────────────────╮
  │[1m [0m[1mProperty   [0m[1m [0m│[1m [0m[1mValue              [0m[1m [0m│
  ├─────────────┼─────────────────────┤
  │[36m [0m[36mFile       [0m[36m [0m│[35m [0m[35m/path/to/empty.xml [0m[35m [0m│
  │[36m [0m[36mStart Time [0m[36m [0m│[35m [0m[35m2024-01-25T10:00:00[0m[35m [0m│
  │[36m [0m[36mTotal Tests[0m[36m [0m│[35m [0m[35m0                  [0m[35m [0m│
  │[32m [0m[32mFailures   [0m[32m [0m│[32m [0m[32m0                  [0m[32m [0m│
  ╰─────────────┴─────────────────────╯
  
  '''
# ---
# name: TestSummaryFormatterSnapshots.test_summary_minimal_report
  '''
  [3m       Module: ECU_Diagnostics       [0m
  ╭─────────────┬─────────────────────╮
  │[1m [0m[1mProperty   [0m[1m [0m│[1m [0m[1mValue              [0m[1m [0m│
  ├─────────────┼─────────────────────┤
  │[36m [0m[36mFile       [0m[36m [0m│[35m [0m[35m/path/to/report.xml[0m[35m [0m│
  │[36m [0m[36mStart Time [0m[36m [0m│[35m [0m[35m2024-01-25T10:00:00[0m[35m [0m│
  │[36m [0m[36mTotal Tests[0m[36m [0m│[35m [0m[35m1                  [0m[35m [0m│
  │[31m [0m[31mFailures   [0m[31m [0m│[31m [0m[31m1                  [0m[31m [0m│
  ╰─────────────┴─────────────────────╯
  
  [1;31mFailed Tests:[0m
    [31m•[0m Check_DTC_Status: [3mDTC mismatch[0m
  
  '''
# ---
# name: TestSummaryFormatterSnapshots.test_summary_report_all_pass
  '''
  [3m        Module: Perfect_Module        [0m
  ╭─────────────┬──────────────────────╮
  │[1m [0m[1mProperty   [0m[1m [0m│[1m [0m[1mValue               [0m[1m [0m│
  ├─────────────┼──────────────────────┤
  │[36m [0m[36mFile       [0m[36m [0m│[35m [0m[35m/path/to/perfect.xml[0m[35m [0m│
  │[36m [0m[36mStart Time [0m[36m [0m│[35m [0m[35m2024-01-25T10:00:00 [0m[35m [0m│
  │[36m [0m[36mTotal Tests[0m[36m [0m│[35m [0m[35m3                   [0m[35m [0m│
  │[32m [0m[32mFailures   [0m[32m [0m│[32m [0m[32m0                   [0m[32m [0m│
  ╰─────────────┴──────────────────────╯
  
  '''
# ---
# name: TestSummaryFormatterSnapshots.test_summary_report_with_failures
  '''
  [3m       Module: ECU_Diagnostics       [0m
  ╭─────────────┬─────────────────────╮
  │[1m [0m[1mProperty   [0m[1m [0m│[1m [0m[1mValue              [0m[1m [0m│
  ├─────────────┼─────────────────────┤
  │[36m [0m[36mFile       [0m[36m [0m│[35m [0m[35m/path/to/report.xml[0m[35m [0m│
  │[36m [0m[36mStart Time [0m[36m [0m│[35m [0m[35m2024-01-25T10:00:00[0m[35m [0m│
  │[36m [0m[36mTotal Tests[0m[36m [0m│[35m [0m[35m2                  [0m[35m [0m│
  │[31m [0m[31mFailures   [0m[31m [0m│[31m [0m[31m1                  [0m[31m [0m│
  ╰─────────────┴─────────────────────╯
  
  [1;31mFailed Tests:[0m
    [31m•[0m Check_DTC_Status: [3mExpected DTC [0m[1;3;36m0x123456[0m[3m, got [0m[1;3;36m0x000000[0m
  
  '''
# ---
